--- a/src/components/Card/card.module.css
+++ b/src/components/Card/card.module.css
@@ -3,20 +3,23 @@
   border: 1.5px solid black;
   border-radius: 10px;
   padding: 10px;
-  width: 75%;
+   min-width: 75%;
   display: flex;
   flex-direction: column;
 }
-
+.card> div{
+   margin: 5px;
+}
 .card> .title{
    font-weight: bold;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 
 }
 
-.card> .pic{
+.card> .pic> img{
 
-    width: fit-content;
+    width: 90%;
+    height: 90%;
     border-radius: 15px;
 
 }
