--- a/src/components/Musics/store.module.css
+++ b/src/components/Musics/store.module.css
@@ -2,10 +2,10 @@
      display: grid;
      position: relative;
      grid-template-columns: 250px 2fr;
-     width: fit-content;
+     max-width: 32rem;
      gap: 10px;
 
-     left: 35vw;
+     left: 30vw;
 }
 
 .Items> {
@@ -15,5 +15,6 @@
 @media (max-width:760px) {
      .Items{
           left: 5vw;
+     
      }
 }
